Train/wandb/run-20230301_151342-pks5se05/files/output.log
GPU available: True (cuda), used: True
TPU available: False, using: 0 TPU cores
IPU available: False, using: 0 IPUs
HPU available: False, using: 0 HPUs
LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]
  | Name     | Type               | Params
------------------------------------------------
0 | layer_1  | Conv2d             | 30
1 | layer_2  | Conv2d             | 168
2 | layer_3  | Conv2d             | 660
3 | pool     | MaxPool2d          | 0
4 | layer_5  | Linear             | 30.0 M
5 | layer_6  | Linear             | 100 K
6 | layer_7  | Linear             | 5.0 K
7 | layer_8  | Linear             | 510
8 | layer_9  | Linear             | 110
9 | accuracy | MulticlassAccuracy | 0
------------------------------------------------
30.1 M    Trainable params
0         Non-trainable params
30.1 M    Total params
120.431   Total estimated model params size (MB)
[34m[1mwandb[39m[22m: [33mWARNING[39m Config item 'lr' was locked by 'sweep' (ignored update).
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
[34m[1mwandb[39m[22m: [32m[41mERROR[39m[49m Error while calling W&B API: could not find agent v4wf0pzd during agentHeartbeat (<Response [404]>)
Exception in thread Thread-15 (_heartbeat):
Traceback (most recent call last):
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\sdk\lib\retry.py", line 131, in __call__
    result = self._call_fn(*args, **kwargs)
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\sdk\internal\internal_api.py", line 242, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\transport\requests.py", line 39, in execute
    request.raise_for_status()
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\requests\models.py", line 1021, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\sdk\internal\internal_api.py", line 2126, in agent_heartbeat
    response = self.gql(
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\sdk\internal\internal_api.py", line 214, in gql
    ret = self._retry_gql(
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\sdk\lib\retry.py", line 147, in __call__
    retry_timedelta_triggered = check_retry_fn(e)
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\util.py", line 1011, in no_retry_auth
    raise CommError(f"Permission denied to access {wandb.run.path}")
wandb.errors.CommError: Permission denied to access christopher-marais/mnist_bc/pks5se05
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\threading.py", line 1016, in _bootstrap_inner
    self.run()
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\threading.py", line 953, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\agents\pyagent.py", line 166, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\apis\internal.py", line 126, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\site-packages\wandb\sdk\internal\internal_api.py", line 2137, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\ast.py", line 64, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
  File "C:\Users\gcmar\.conda\envs\BC_310\lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Permission denied to access christopher-marais/mnist_bc/pks5se05
               ^^^^^^
SyntaxError: invalid syntax
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
torch.Size([10, 30000])
`Trainer.fit` stopped: `max_epochs=100` reached.